--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@prisma/client": "^5.8.1",
     "fastify": "^4.25.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "prisma": "^5.8.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
